--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "gpt-project-hub",
   "private": true,
   "scripts": {
-    "sync": "./scripts/sync-docs.sh"
+    "sync": "./scripts/sync-docs.sh",
+    "build:preview": "./scripts/build-preview.sh"
+  },
+  "devDependencies": {
+    "esbuild": "^0.20.2"
   }
 }
