--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm install
 
       - name: Build preview
-        run: npm run build:preview
+        run: bash scripts/build-preview.sh
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
